a test, spacing fix

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,7 +28,7 @@ nav {
 	a {
 		color: #fff;
 		display: inline-block;
-		padding: 10px 15px;
+		padding: 100px 15px;
 		line-height: 1;
 		text-decoration: none;
 		@include border-radius(2px);
@@ -40,7 +40,7 @@ nav {
 
 body {
   	background-color: #ecf0f1;
-	padding-top: 330px;
+	padding-top: 180px;
 	@include transition(padding-top .5s ease)
 }
 
